Do not call CollectContextGraphicsInfo if GL has failed to initialize

If the gpu process is not yet launch when calling
GpuDataManagerImplPrivate::RequestCompleteGpuInfoIfNeeded()
it will cause to start the gpu process and send the message
GpuMsg_CollectGraphicsInfo right away.
(possible causes: browser_bridge.js, SystemInfoHandler::GetInfo,
GPUFeatureChecker)

On gpu side this will cause to call GpuMain,
GpuChildThread's constructor, OnInitialize and
OnCollectGraphicsInfo sequentially.

If dead_on_arrival_ is true then GpuChildThread::OnInitialize
calls base::MessageLoop::current()->QuitWhenIdle() which might
let handle the pending GpuMsg_CollectGraphicsInfo message.

BUG=619106

R=jbauman@chromium.org, kbr@chromium.org, piman@chromium.org, zmo@chromium.org

Review-Url: https://codereview.chromium.org/2061953002
Cr-Commit-Position: refs/heads/master@{#399669}

Former-commit-id: e02f94b59fa148e354db57a0f5d38f6bb644aa55